--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
 body{
     font-family: Arial;
     font-size: 2em;
+    background-color: #212121;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#wordleGrid {
+    display: grid;
+    grid-template-columns: repeat(5, 60px);
+    grid-gap: 10px 25px;
+    margin: auto;
+    width: 50%;
+    justify-content: center; /* ✅ Center grid horizontally */
+}
+
+.cell {
+    border-color: lightgray;
+    border: 3px solid lightgrey;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    margin: auto;
+    
+    
+
 }
